Updating some xrefs and updating rendering
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/v2.13/modules/en/pages/release-notes/v2.13.1.adoc
+++ b/versions/v2.13/modules/en/pages/release-notes/v2.13.1.adoc
@@ -20,7 +20,7 @@ For more information see https://github.com/rancher/rancher/issues/48655[#48655]
 ifeval::["{build-type}" == "community"]
 https://ranchermanager.docs.rancher.com/v2.13/integrations-in-rancher/istio[Rancher-Istio] has been deprecated in Rancher v2.12.0; turn to the https://apps.rancher.io[SUSE Application Collection] build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions). Detailed information can be found in https://forums.suse.com/t/deprecation-of-rancher-istio/45043[this announcement].
 endif::[]
-ifeval::["{build-type}" == "product"]
+ifeval::["{build-type}" != "community"]
 https://documentation.suse.com/cloudnative/rancher-manager/v2.13/en/observability/istio/istio.html[Rancher-Istio] has been deprecated in Rancher v2.12.0; turn to the https://apps.rancher.io[SUSE Application Collection] build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions). Detailed information can be found in https://forums.suse.com/t/deprecation-of-rancher-istio/45043[this announcement].
 endif::[]
 ====
@@ -36,8 +36,8 @@ ifeval::["{build-type}" != "community"]
 
 === Cluster Provisioning - Features and Enhancements
 
-* The Kubernetes Cluster Autoscaler is available in Rancher Prime version 2.13.1 and higher. It automatically adjusts the size of any configured worker node pools to match the current cluster workload. Refer to the [Cluster Autoscaler Prime documentation](https://scc.suse.com/rancher-docs/rancherprime/latest/en/suse-rancher-prime/cluster-autoscaler.html) for more information. See [#49680](https://github.com/rancher/rancher/issues/49680).
-* Rancher Prime v2.13.1 and higher supports Alibaba hosted clusters. Note only Alibaba Managed clusters are supported. Any other type of Alibaba cluster, such as Edge or Serverless, are not supported. Refer to the [Alibaba Hosted Cluster Prime documentation](https://scc.suse.com/rancher-docs/rancherprime/latest/en/suse-rancher-prime/alibaba-hosted-clusters/setting-up-rancher.html) for more information. See [#50153](https://github.com/rancher/rancher/issues/50153).
+* The Kubernetes Cluster Autoscaler is available in Rancher Prime version 2.13.1 and higher. It automatically adjusts the size of any configured worker node pools to match the current cluster workload. Refer to the https://scc.suse.com/rancher-docs/rancherprime/latest/en/suse-rancher-prime/cluster-autoscaler.html[Cluster Autoscaler Prime documentation] for more information. See https://github.com/rancher/rancher/issues/49680[#49680].
+* Rancher Prime v2.13.1 and higher supports Alibaba hosted clusters. Note only Alibaba Managed clusters are supported. Any other type of Alibaba cluster, such as Edge or Serverless, are not supported. Refer to the https://scc.suse.com/rancher-docs/rancherprime/latest/en/suse-rancher-prime/alibaba-hosted-clusters/setting-up-rancher.html[Alibaba Hosted Cluster Prime documentation] for more information. See https://github.com/rancher/rancher/issues/50153[#50153].
 endif::[]
 
 == Rancher General
@@ -128,7 +128,7 @@ endif::[]
 ifeval::["{build-type}" == "community"]
 If you're installing Rancher for the first time, your environment must fulfill the https://ranchermanager.docs.rancher.com/v2.13/getting-started/installation-and-upgrade/installation-requirements[installation requirements].
 endif::[]
-ifeval::["{build-type}" == "product"]
+ifeval::["{build-type}" != "community"]
 If you're installing Rancher for the first time, your environment must fulfill the https://documentation.suse.com/cloudnative/rancher-manager/v2.13/en/installation-and-upgrade/requirements/requirements.html[installation requirements].
 endif::[]
 
@@ -147,7 +147,7 @@ Rancher now requires the cluster it runs on to have the https://kubernetes.io/do
 ifeval::["{build-type}" == "community"]
 Refer to the https://ranchermanager.docs.rancher.com/v2.13/api/extension-apiserver#aggregation-layer-is-required[Extension API Server documentation] and https://github.com/rancher/rancher/issues/50400[#50400] for more information.
 endif::[]
-ifeval::["{build-type}" == "product"]
+ifeval::["{build-type}" != "community"]
 Refer to the https://documentation.suse.com/cloudnative/rancher-manager/v2.13/en/api/extension-apiserver.html#_aggregation_layer_is_required[Extension API Server documentation] and https://github.com/rancher/rancher/issues/50400[#50400] for more information.
 endif::[]
 ====
@@ -166,7 +166,7 @@ It is crucial that you review the available disk space on your nodes and plan ac
 ifeval::["{build-type}" == "community"]
 For additional information refer to the https://ranchermanager.docs.rancher.com/v2.13/how-to-guides/advanced-user-guides/ui-server-side-pagination#disk-space[UI Server Side Pagination - Disk Space documentation].
 endif::[]
-ifeval::["{build-type}" == "product"]
+ifeval::["{build-type}" != "community"]
 For additional information refer to the https://documentation.suse.com/cloudnative/rancher-manager/v2.13/en/rancher-admin/global-configuration/ui-server-side-pagination.html#_disk_space[UI Server Side Pagination - Disk Space documentation].
 endif::[]
 ====
@@ -176,7 +176,7 @@ endif::[]
 ifeval::["{build-type}" == "community"]
 Rancher now has an enablement option called https://ranchermanager.docs.rancher.com/v2.13/how-to-guides/advanced-user-guides/enable-api-audit-log#viewing-api-audit-logs:~:text=Description-,AUDIT_LOG_ENABLED,-false%20%2D%20Disables%20the[`AUDIT_LOG_ENABLED`] for API Audit Logs for a Rancher installation. In Rancher versions 2.11.x and earlier, only the `AUDIT_LEVEL` could be set and the default log level (`0`) would disable the audit log. In Rancher versions 2.12.x and later, the default log level (`0`) now only contains the log request and response metadata, and can be set when configuring `AUDIT_LOG_ENABLED`. If installing or upgrading via Helm you can enable the API Audit Logs and specify the log level by applying the following setting to your Helm command: `--set auditLog.enabled=true --set auditLog.level=0`. See the https://ranchermanager.docs.rancher.com/v2.13/how-to-guides/advanced-user-guides/enable-api-audit-log[Enabling the API Audit Log to Record System Events] documentation and https://github.com/rancher/rancher/issues/48941[#48941].
 endif::[]
-ifeval::["{build-type}" == "product"]
+ifeval::["{build-type}" != "community"]
 Rancher now has an enablement option called https://documentation.suse.com/cloudnative/rancher-manager/v2.13/en/observability/logging/enable-api-audit-log.html#_api_audit_log_options[`AUDIT_LOG_ENABLED`] for API Audit Logs for a Rancher installation. In Rancher versions 2.11.x and earlier, only the `AUDIT_LEVEL` could be set and the default log level (`0`) would disable the audit log. In Rancher versions 2.12.x and later, the default log level (`0`) now only contains the log request and response metadata, and can be set when configuring `AUDIT_LOG_ENABLED`. If installing or upgrading via Helm you can enable the API Audit Logs and specify the log level by applying the following setting to your Helm command: `--set auditLog.enabled=true --set auditLog.level=0`. See the https://documentation.suse.com/cloudnative/rancher-manager/v2.13/en/observability/logging/enable-api-audit-log.html[Enabling the API Audit Log to Record System Events] documentation and https://github.com/rancher/rancher/issues/48941[#48941].
 endif::[]
 ====
@@ -193,7 +193,7 @@ Image artifact digests are renamed in Rancher v2.12.0, v2.11.4 and v2.10.8. Up u
 ifeval::["{build-type}" == "community"]
 * *Creating backups:* https://ranchermanager.docs.rancher.com/v2.13/how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/back-up-rancher[Create a backup] before you upgrade Rancher. To roll back Rancher after an upgrade, you must first back up and restore Rancher to the previous Rancher version. Because Rancher will be restored to the same state as when the backup was created, any changes post-upgrade will not be included after the restore.
 endif::[]
-ifeval::["{build-type}" == "product"]
+ifeval::["{build-type}" != "community"]
 * *Creating backups:* https://documentation.suse.com/cloudnative/rancher-manager/v2.13/en/rancher-admin/back-up-restore-and-disaster-recovery/back-up.html[Create a backup] before you upgrade Rancher. To roll back Rancher after an upgrade, you must first back up and restore Rancher to the previous Rancher version. Because Rancher will be restored to the same state as when the backup was created, any changes post-upgrade will not be included after the restore.
 endif::[]
 * *Helm version requirements:*
@@ -208,7 +208,7 @@ ifeval::["{build-type}" == "community"]
 ** When using a proxy in front of an air-gapped Rancher instance, you must pass additional parameters to `NO_PROXY`. See the https://docs.ranchermanager.rancher.io/getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/install-rancher[documentation] and issue https://github.com/rancher/docs/issues/2725#issuecomment-702454584[#2725].
 ** When installing Rancher with Docker in an air-gapped environment, you must supply a custom `registries.yaml` file to the `docker run` command, as shown in the https://docs.k3s.io/installation/private-registry[K3s documentation]. If the registry has certificates, then you'll also need to supply those. See https://github.com/rancher/rancher/issues/28969#issuecomment-694474229[#28969].
 endif::[]
-ifeval::["{build-type}" == "product"]
+ifeval::["{build-type}" != "community"]
 ** When using a proxy in front of an air-gapped Rancher instance, you must pass additional parameters to `NO_PROXY`. See the https://documentation.suse.com/cloudnative/rancher-manager/v2.12/en/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.html[documentation] and issue https://github.com/rancher/docs/issues/2725#issuecomment-702454584[#2725].
 ** When installing Rancher with Docker in an air-gapped environment, you must supply a custom `registries.yaml` file to the `docker run` command, as shown in the https://documentation.suse.com/cloudnative/k3s/latest/en/installation/private-registry.html[K3s documentation]. If the registry has certificates, then you'll also need to supply those. See https://github.com/rancher/rancher/issues/28969#issuecomment-694474229[#28969].
 endif::[]
@@ -273,7 +273,7 @@ To improve repository performance Rancher is introducing a lifecycle management 
 // no issue number available
 
 * *Rancher v2.13.0:*
-** Provisioning or importing an Amazon EKS downstream cluster fails when the Rancher Server is running in an IPv6-only or dual-stack environment. See [#52154](https://github.com/rancher/rancher/issues/52154).
+** Provisioning or importing an Amazon EKS downstream cluster fails when the Rancher Server is running in an IPv6-only or dual-stack environment. See https://github.com/rancher/rancher/issues/52154[#52154].
 * *Rancher v2.8.1:*
 ** When you  attempt to register a new etcd/controlplane node in a CAPR-managed cluster after a failed etcd snapshot restoration, the node can become stuck in a perpetual paused state, displaying the error message `[ERROR]  000 received while downloading Rancher connection information. Sleeping for 5 seconds and trying again`. As a workaround, you can unpause the cluster by running `kubectl edit clusters.cluster clustername -n fleet-default` and set `spec.unpaused` to `false`.  See https://github.com/rancher/rancher/issues/43735[#43735].
 * *Rancher v2.7.2:*
@@ -345,6 +345,6 @@ To improve repository performance Rancher is introducing a lifecycle management 
 // no issue number
 
 * *Rancher v2.13.0:*
-** When performing a rollback from Rancher v2.13.0 to v2.12.3 using the backup and restore operator (BRO), the restore does not complete successfully. See [#844](https://github.com/rancher/backup-restore-operator/issues/844). To work around this issue, you must scale down your Rancher deployment and uninstall the Webhook chart before performing the restore. For details, refer to this [Knowledge Base article](https://support.scc.suse.com/s/kb/Rolling-back-from-Rancher-v2-13-0-to-v2-12-3?language=en_US).
+** When performing a rollback from Rancher v2.13.0 to v2.12.3 using the backup and restore operator (BRO), the restore does not complete successfully. See https://github.com/rancher/backup-restore-operator/issues/844[#844]. To work around this issue, you must scale down your Rancher deployment and uninstall the Webhook chart before performing the restore. For details, refer to this https://support.scc.suse.com/s/kb/Rolling-back-from-Rancher-v2-13-0-to-v2-12-3?language=en_US[Knowledge Base article].
 * *Rancher v2.7.7:*
 ** Due to the backoff logic in various components, downstream provisioned K3s and RKE2 clusters may take longer to re-achieve *Active* status after a migration. If you see that a downstream cluster is still updating or in an error state immediately after a migration, please let it attempt to resolve itself. This might take up to an hour to complete. See https://github.com/rancher/rancher/issues/34518[#34518] and https://github.com/rancher/rancher/issues/42834[#42834].
