--- a/versions/v2.13/modules/zh/pages/release-notes/v2.13.1.adoc
+++ b/versions/v2.13/modules/zh/pages/release-notes/v2.13.1.adoc
@@ -20,23 +20,31 @@ For more information see https://github.com/rancher/rancher/issues/48655[#48655]
 ifeval::["{build-type}" == "community"]
 https://ranchermanager.docs.rancher.com/v2.13/integrations-in-rancher/istio[Rancher-Istio] has been deprecated in Rancher v2.12.0; turn to the https://apps.rancher.io[SUSE Application Collection] build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions). Detailed information can be found in https://forums.suse.com/t/deprecation-of-rancher-istio/45043[this announcement].
 endif::[]
-ifeval::["{build-type}" == "product"]
+ifeval::["{build-type}" != "community"]
 https://documentation.suse.com/cloudnative/rancher-manager/v2.13/en/observability/istio/istio.html[Rancher-Istio] has been deprecated in Rancher v2.12.0; turn to the https://apps.rancher.io[SUSE Application Collection] build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions). Detailed information can be found in https://forums.suse.com/t/deprecation-of-rancher-istio/45043[this announcement].
 endif::[]
 ====
 
-Rancher v2.13.1 is the latest patch release of Rancher. This is a Prime version release that introduces maintenance updates and bug fixes. To learn more about Rancher Prime, see our page on the https://www.rancher.com/products/rancher-platform[Rancher Prime Platform].
+Rancher v2.13.1 is the latest patch release of Rancher. This is a Prime version release that introduces new features, enhancements, and bug fixes. To learn more about Rancher Prime, see our page on the https://www.rancher.com/products/rancher-platform[Rancher Prime Platform].
+
+ifeval::["{build-type}" != "community"]
+== What's New - SUSE Rancher Prime v2.13.1
+
+=== Rancher Prime Chart Name
+
+* Starting with Rancher Prime v2.13.1, the chart name has changed from `rancher` to `rancher-prime`. This means when you upgrade or install Rancher v2.13.1 or greater, the chart name you use will be `rancher-prime` instead. As an example the installation command is now `helm install rancher rancher-prime/rancher-prime`. Note that you must first set up the `rancher-prime` chart repository.
+
+=== Cluster Provisioning - Features and Enhancements
+
+* The Kubernetes Cluster Autoscaler is available in Rancher Prime version 2.13.1 and higher. It automatically adjusts the size of any configured worker node pools to match the current cluster workload. Refer to the https://scc.suse.com/rancher-docs/rancherprime/latest/en/suse-rancher-prime/cluster-autoscaler.html[Cluster Autoscaler Prime documentation] for more information. See https://github.com/rancher/rancher/issues/49680[#49680].
+* Rancher Prime v2.13.1 and higher supports Alibaba hosted clusters. Note only Alibaba Managed clusters are supported. Any other type of Alibaba cluster, such as Edge or Serverless, are not supported. Refer to the https://scc.suse.com/rancher-docs/rancherprime/latest/en/suse-rancher-prime/alibaba-hosted-clusters/setting-up-rancher.html[Alibaba Hosted Cluster Prime documentation] for more information. See https://github.com/rancher/rancher/issues/50153[#50153].
+endif::[]
 
 == Rancher General
 
 === Features and Enhancements
 
 * Rancher now supports Kubernetes v1.34. See https://github.com/rancher/rancher/issues/51252[#51252] for information on Rancher support for Kubernetes v1.34. You can view the upstream Kubernetes changelogs for https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.34.md[v1.34] for a complete list of changes.
-
-=== Behavior Changes
-
-* Starting with Rancher Prime v2.13.1, the chart name has changed from `rancher` to `rancher-prime`. This means when you upgrade or install Rancher v2.13.1 or greater, the chart name you use will be `rancher-prime` instead. As an example the installation command is now `helm install rancher rancher-prime/rancher-prime`. Note that you must first set up the `rancher-prime` chart repository.
-* Official support for Kubernetes v1.31 and older versions has been removed. You can no longer provision new RKE2 or K3s clusters using the Kubernetes versions that fall outside of the supported range (v1.32 - v1.34). See https://github.com/rancher/rancher/issues/51253[#51253].
 
 === Major Bug Fixes
 
@@ -50,11 +58,6 @@ Rancher v2.13.1 is the latest patch release of Rancher. This is a Prime version 
 * Introduced support for dynamic content on the Rancher Manager Home screen, allowing timely information, such as product announcements, new releases, feature highlights, and relevant updates to be displayed upon logging in. See https://github.com/rancher/dashboard/issues/15342[#15342].
 * Rancher Default and Prime themes have been refreshed. See https://github.com/rancher/dashboard/issues/15166[#15166].
 * Introduced a Cron Editor component, providing a user interface for defining and managing CronJob schedules. See https://github.com/rancher/dashboard/issues/14341[#14341].
-
-=== Behavior Changes
-
-* The Rancher UI for provisioning hosted Kubernetes clusters (AKS, EKS, and GKE) has been updated to align with the new Cluster Provisioning v2 (kev2) framework. This change replaces the reliance on the older kontainerdriver (kev1) resources to determine which hosted providers are available for display. The UI now uses a new setting to manage the visibility of these providers, ensuring consistency and future compatibility. See https://github.com/rancher/dashboard/issues/15391[#15391].
-* Rancher's session inactivity logic has been moved from the UI to the backend. A new session TTL setting `auth-user-session-idle-ttl-minutes` was introduced, and it sets the maximum time a user is allowed to be idle within a browser session before the session expires. To enable the idle timeout feature, you must supply `auth-user-session-idle-ttl-minutes` and set it to a value lower than the existing absolute session limit, `auth-user-session-ttl-minutes`. This new backend-driven mechanism, along with its associated TTL setting, replaces the previous session timeout configuration in the UI under *Global Settings* > *Performance*. See https://github.com/rancher/dashboard/issues/12552[#12552].
 
 === Major Bug Fixes
 
@@ -78,14 +81,10 @@ Rancher v2.13.1 is the latest patch release of Rancher. This is a Prime version 
 
 * Rancher now includes initial support for IPv6, providing the foundational capabilities needed to manage clusters using IPv6 addressing. You can deploy Rancher on IPv6-only or dual-stack clusters, and you can provision IPv6-only or dual-stack clusters on Amazon EC2 or DigitalOcean using node drivers, as well as create custom clusters with IPv6 or dual-stack support. See https://github.com/rancher/rancher/issues/49689[#49689].
 * Rancher now uses Rancher Turtles as the default component for providing Cluster API (CAPI) controllers and Custom Resource Definitions (CRDs) necessary for RKE2 and K3s cluster provisioning (v2prov). This change replaces the previous Rancher Provisioning component. Upon upgrade, the Rancher Provisioning chart is automatically uninstalled from the Rancher management cluster and replaced with the Rancher Turtles chart. See https://github.com/rancher/rancher/issues/52254[#52254].
-ifeval::["{build-type}" != "community"]
-* The Kubernetes Cluster Autoscaler is available in Rancher Prime version 2.13.1 and higher. It automatically adjusts the size of any configured worker node pools to match the current cluster workload. Refer to the https://scc.suse.com/rancher-docs/rancherprime/latest/en/suse-rancher-prime/cluster-autoscaler.html[Cluster Autoscaler Prime documentation] for more information. See https://github.com/rancher/rancher/issues/49680[#49680].
-* Rancher Prime v2.13.1 and higher supports Alibaba hosted clusters. Note only Alibaba Managed clusters are supported. Any other type of Alibaba cluster, such as Edge or Serverless, are not supported. Refer to the https://scc.suse.com/rancher-docs/rancherprime/latest/en/suse-rancher-prime/alibaba-hosted-clusters/setting-up-rancher.html[Alibaba Hosted Cluster Prime documentation] for more information. See https://github.com/rancher/rancher/issues/50153[#50153].
-endif::[]
 
 === Major Bug Fixes
 
-* Fixed an issue with cluster provisioning not working as expected in air-gapped Rancher setups due to `capi-controller-manager` not coming up **Active**. See https://github.com/rancher/rancher/issues/52833[#52833] and https://github.com/rancher/rancher/issues/52495[#52495] for further information.
+* Fixed an issue with cluster provisioning not working as expected in air-gapped Rancher setups due to `capi-controller-manager` not coming up *Active*. See https://github.com/rancher/rancher/issues/52833[#52833] and https://github.com/rancher/rancher/issues/52495[#52495] for further information.
 * Fixed an issue where Standard Users assigned the Cluster Owner role on a downstream cluster were unable to view or restore existing etcd snapshots via the Rancher UI. Cluster Owners now have the correct permissions to see and restore snapshots as expected. See https://github.com/rancher/rancher/issues/52307[#52307].
 
 == Rancher Webhook
@@ -129,7 +128,7 @@ endif::[]
 ifeval::["{build-type}" == "community"]
 If you're installing Rancher for the first time, your environment must fulfill the https://ranchermanager.docs.rancher.com/v2.13/getting-started/installation-and-upgrade/installation-requirements[installation requirements].
 endif::[]
-ifeval::["{build-type}" == "product"]
+ifeval::["{build-type}" != "community"]
 If you're installing Rancher for the first time, your environment must fulfill the https://documentation.suse.com/cloudnative/rancher-manager/v2.13/en/installation-and-upgrade/requirements/requirements.html[installation requirements].
 endif::[]
 
@@ -148,7 +147,7 @@ Rancher now requires the cluster it runs on to have the https://kubernetes.io/do
 ifeval::["{build-type}" == "community"]
 Refer to the https://ranchermanager.docs.rancher.com/v2.13/api/extension-apiserver#aggregation-layer-is-required[Extension API Server documentation] and https://github.com/rancher/rancher/issues/50400[#50400] for more information.
 endif::[]
-ifeval::["{build-type}" == "product"]
+ifeval::["{build-type}" != "community"]
 Refer to the https://documentation.suse.com/cloudnative/rancher-manager/v2.13/en/api/extension-apiserver.html#_aggregation_layer_is_required[Extension API Server documentation] and https://github.com/rancher/rancher/issues/50400[#50400] for more information.
 endif::[]
 ====
@@ -167,7 +166,7 @@ It is crucial that you review the available disk space on your nodes and plan ac
 ifeval::["{build-type}" == "community"]
 For additional information refer to the https://ranchermanager.docs.rancher.com/v2.13/how-to-guides/advanced-user-guides/ui-server-side-pagination#disk-space[UI Server Side Pagination - Disk Space documentation].
 endif::[]
-ifeval::["{build-type}" == "product"]
+ifeval::["{build-type}" != "community"]
 For additional information refer to the https://documentation.suse.com/cloudnative/rancher-manager/v2.13/en/rancher-admin/global-configuration/ui-server-side-pagination.html#_disk_space[UI Server Side Pagination - Disk Space documentation].
 endif::[]
 ====
@@ -177,7 +176,7 @@ endif::[]
 ifeval::["{build-type}" == "community"]
 Rancher now has an enablement option called https://ranchermanager.docs.rancher.com/v2.13/how-to-guides/advanced-user-guides/enable-api-audit-log#viewing-api-audit-logs:~:text=Description-,AUDIT_LOG_ENABLED,-false%20%2D%20Disables%20the[`AUDIT_LOG_ENABLED`] for API Audit Logs for a Rancher installation. In Rancher versions 2.11.x and earlier, only the `AUDIT_LEVEL` could be set and the default log level (`0`) would disable the audit log. In Rancher versions 2.12.x and later, the default log level (`0`) now only contains the log request and response metadata, and can be set when configuring `AUDIT_LOG_ENABLED`. If installing or upgrading via Helm you can enable the API Audit Logs and specify the log level by applying the following setting to your Helm command: `--set auditLog.enabled=true --set auditLog.level=0`. See the https://ranchermanager.docs.rancher.com/v2.13/how-to-guides/advanced-user-guides/enable-api-audit-log[Enabling the API Audit Log to Record System Events] documentation and https://github.com/rancher/rancher/issues/48941[#48941].
 endif::[]
-ifeval::["{build-type}" == "product"]
+ifeval::["{build-type}" != "community"]
 Rancher now has an enablement option called https://documentation.suse.com/cloudnative/rancher-manager/v2.13/en/observability/logging/enable-api-audit-log.html#_api_audit_log_options[`AUDIT_LOG_ENABLED`] for API Audit Logs for a Rancher installation. In Rancher versions 2.11.x and earlier, only the `AUDIT_LEVEL` could be set and the default log level (`0`) would disable the audit log. In Rancher versions 2.12.x and later, the default log level (`0`) now only contains the log request and response metadata, and can be set when configuring `AUDIT_LOG_ENABLED`. If installing or upgrading via Helm you can enable the API Audit Logs and specify the log level by applying the following setting to your Helm command: `--set auditLog.enabled=true --set auditLog.level=0`. See the https://documentation.suse.com/cloudnative/rancher-manager/v2.13/en/observability/logging/enable-api-audit-log.html[Enabling the API Audit Log to Record System Events] documentation and https://github.com/rancher/rancher/issues/48941[#48941].
 endif::[]
 ====
@@ -194,7 +193,7 @@ Image artifact digests are renamed in Rancher v2.12.0, v2.11.4 and v2.10.8. Up u
 ifeval::["{build-type}" == "community"]
 * *Creating backups:* https://ranchermanager.docs.rancher.com/v2.13/how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/back-up-rancher[Create a backup] before you upgrade Rancher. To roll back Rancher after an upgrade, you must first back up and restore Rancher to the previous Rancher version. Because Rancher will be restored to the same state as when the backup was created, any changes post-upgrade will not be included after the restore.
 endif::[]
-ifeval::["{build-type}" == "product"]
+ifeval::["{build-type}" != "community"]
 * *Creating backups:* https://documentation.suse.com/cloudnative/rancher-manager/v2.13/en/rancher-admin/back-up-restore-and-disaster-recovery/back-up.html[Create a backup] before you upgrade Rancher. To roll back Rancher after an upgrade, you must first back up and restore Rancher to the previous Rancher version. Because Rancher will be restored to the same state as when the backup was created, any changes post-upgrade will not be included after the restore.
 endif::[]
 * *Helm version requirements:*
@@ -209,7 +208,7 @@ ifeval::["{build-type}" == "community"]
 ** When using a proxy in front of an air-gapped Rancher instance, you must pass additional parameters to `NO_PROXY`. See the https://docs.ranchermanager.rancher.io/getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/install-rancher[documentation] and issue https://github.com/rancher/docs/issues/2725#issuecomment-702454584[#2725].
 ** When installing Rancher with Docker in an air-gapped environment, you must supply a custom `registries.yaml` file to the `docker run` command, as shown in the https://docs.k3s.io/installation/private-registry[K3s documentation]. If the registry has certificates, then you'll also need to supply those. See https://github.com/rancher/rancher/issues/28969#issuecomment-694474229[#28969].
 endif::[]
-ifeval::["{build-type}" == "product"]
+ifeval::["{build-type}" != "community"]
 ** When using a proxy in front of an air-gapped Rancher instance, you must pass additional parameters to `NO_PROXY`. See the https://documentation.suse.com/cloudnative/rancher-manager/v2.12/en/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.html[documentation] and issue https://github.com/rancher/docs/issues/2725#issuecomment-702454584[#2725].
 ** When installing Rancher with Docker in an air-gapped environment, you must supply a custom `registries.yaml` file to the `docker run` command, as shown in the https://documentation.suse.com/cloudnative/k3s/latest/en/installation/private-registry.html[K3s documentation]. If the registry has certificates, then you'll also need to supply those. See https://github.com/rancher/rancher/issues/28969#issuecomment-694474229[#28969].
 endif::[]
@@ -234,6 +233,31 @@ endif::[]
 
 In Rancher v2.6.0 and later, in the *Apps & Marketplace* UI, many Rancher Helm charts are named with a major version that starts with _100_. This avoids simultaneous upstream changes and Rancher changes from causing conflicting version increments. This also complies with semantic versioning (SemVer), which is a requirement for Helm. You can see the upstream version number of a chart in the build metadata, for example: `100.0.0+up2.1.0`. See https://github.com/rancher/rancher/issues/32294[#32294].
 
+== Previous Rancher Behavior Changes
+
+=== Previous Rancher Behavior Changes - Rancher General
+
+* *Rancher v2.13.0:*
+** Official support for Kubernetes v1.31 and older versions has been removed. You can no longer provision new RKE2 or K3s clusters using the Kubernetes versions that fall outside of the supported range (v1.32 - v1.34). See https://github.com/rancher/rancher/issues/51253[#51253].
+
+=== Previous Rancher Behavior Changes - Rancher App (Global UI)
+
+* **Rancher v2.13.0:**
+** The Rancher UI for provisioning hosted Kubernetes clusters (AKS, EKS, and GKE) has been updated to align with the new Cluster Provisioning v2 (kev2) framework. This change replaces the reliance on the older kontainerdriver (kev1) resources to determine which hosted providers are available for display. The UI now uses a new setting to manage the visibility of these providers, ensuring consistency and future compatibility. See https://github.com/rancher/dashboard/issues/15391[#15391].
+** Rancher's session inactivity logic has been moved from the UI to the backend. A new session TTL setting `auth-user-session-idle-ttl-minutes` was introduced, and it sets the maximum time a user is allowed to be idle within a browser session before the session expires. To enable the idle timeout feature, you must supply `auth-user-session-idle-ttl-minutes` and set it to a value lower than the existing absolute session limit, `auth-user-session-ttl-minutes`. This new backend-driven mechanism, along with its associated TTL setting, replaces the previous session timeout configuration in the UI under *Global Settings* > *Performance*. See https://github.com/rancher/dashboard/issues/12552[#12552].
+
+== Future Rancher Behavior Changes
+
+=== Retention Policy for Rancher App Charts
+
+To improve repository performance Rancher is introducing a lifecycle management policy for charts available in the Apps feature of Rancher, specifically in the "Rancher" repository.
+
+* *The Policy:* Rancher will transition from a cumulative model (retaining all historical versions forever) to a retention model that preserves chart versions for the **seven (7) most recent Rancher minor releases** (approximately a 2.5-year window).
+* *Timeline - Rancher v2.13 & v2.14:* Legacy chart versions (older than the 7-version window) remain available.
+* *Rancher v2.15:* This will be the first version to enforce the policy. Versions falling outside the 7-version window and older than two years will no longer be available.
+
+*Impact:* This change is non-destructive for existing Rancher installations. Historical versions will remain accessible but will not be available in newer release branches once they age out of the 7-version window. You are advised to upgrade your applications before upgrading to Rancher v2.15. Uninstallation after v2.15, and replacement with an updated version, will still be possible.
+
 == Long-standing Known Issues
 
 // Apply same headers as "Major Bug Fixes" but with "Long-standing Known Issues" suffix instead
@@ -249,7 +273,7 @@ In Rancher v2.6.0 and later, in the *Apps & Marketplace* UI, many Rancher Helm c
 // no issue number available
 
 * *Rancher v2.13.0:*
-** Provisioning or importing an Amazon EKS downstream cluster fails when the Rancher Server is running in an IPv6-only or dual-stack environment. See [#52154](https://github.com/rancher/rancher/issues/52154).
+** Provisioning or importing an Amazon EKS downstream cluster fails when the Rancher Server is running in an IPv6-only or dual-stack environment. See https://github.com/rancher/rancher/issues/52154[#52154].
 * *Rancher v2.8.1:*
 ** When you  attempt to register a new etcd/controlplane node in a CAPR-managed cluster after a failed etcd snapshot restoration, the node can become stuck in a perpetual paused state, displaying the error message `[ERROR]  000 received while downloading Rancher connection information. Sleeping for 5 seconds and trying again`. As a workaround, you can unpause the cluster by running `kubectl edit clusters.cluster clustername -n fleet-default` and set `spec.unpaused` to `false`.  See https://github.com/rancher/rancher/issues/43735[#43735].
 * *Rancher v2.7.2:*
@@ -321,6 +345,6 @@ In Rancher v2.6.0 and later, in the *Apps & Marketplace* UI, many Rancher Helm c
 // no issue number
 
 * *Rancher v2.13.0:*
-** When performing a rollback from Rancher v2.13.0 to v2.12.3 using the backup and restore operator (BRO), the restore does not complete successfully. See [#844](https://github.com/rancher/backup-restore-operator/issues/844). To work around this issue, you must scale down your Rancher deployment and uninstall the Webhook chart before performing the restore. For details, refer to this [Knowledge Base article](https://support.scc.suse.com/s/kb/Rolling-back-from-Rancher-v2-13-0-to-v2-12-3?language=en_US).
+** When performing a rollback from Rancher v2.13.0 to v2.12.3 using the backup and restore operator (BRO), the restore does not complete successfully. See https://github.com/rancher/backup-restore-operator/issues/844[#844]. To work around this issue, you must scale down your Rancher deployment and uninstall the Webhook chart before performing the restore. For details, refer to this https://support.scc.suse.com/s/kb/Rolling-back-from-Rancher-v2-13-0-to-v2-12-3?language=en_US[Knowledge Base article].
 * *Rancher v2.7.7:*
 ** Due to the backoff logic in various components, downstream provisioned K3s and RKE2 clusters may take longer to re-achieve *Active* status after a migration. If you see that a downstream cluster is still updating or in an error state immediately after a migration, please let it attempt to resolve itself. This might take up to an hour to complete. See https://github.com/rancher/rancher/issues/34518[#34518] and https://github.com/rancher/rancher/issues/42834[#42834].
