--- a/versions/v2.11/modules/zh/pages/release-notes/v2.11.9.adoc
+++ b/versions/v2.11/modules/zh/pages/release-notes/v2.11.9.adoc
@@ -17,14 +17,14 @@ For more information on new features in the general minor release see the https:
 
 == Changes Since v2.11.8
 
-See the full list of [changes](https://github.com/rancher/rancher/compare/v2.11.8...v2.11.9).
+See the full list of https://github.com/rancher/rancher/compare/v2.11.8...v2.11.9[changes].
 
 == Install/Upgrade Notes
 
 ifeval::["{build-type}" == "community"]
 If you're installing Rancher for the first time, your environment must fulfill the https://ranchermanager.docs.rancher.com/v2.11/getting-started/installation-and-upgrade/installation-requirements[installation requirements].
 endif::[]
-ifeval::["{build-type}" == "product"]
+ifeval::["{build-type}" != "community"]
 If you're installing Rancher for the first time, your environment must fulfill the https://documentation.suse.com/cloudnative/rancher-manager/v2.11/en/installation-and-upgrade/requirements/requirements.html[installation requirements].
 endif::[]
 
@@ -39,7 +39,7 @@ Image artifact digests were renamed in Rancher v2.12.0, v2.11.4 and v2.10.8. Up 
 ifeval::["{build-type}" == "community"]
 * *Creating backups:* https://ranchermanager.docs.rancher.com/v2.11/how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/back-up-rancher[Create a backup] before you upgrade Rancher. To roll back Rancher after an upgrade, you must first back up and restore Rancher to the previous Rancher version. Because Rancher will be restored to the same state as when the backup was created, any changes post-upgrade will not be included after the restore.
 endif::[]
-ifeval::["{build-type}" == "product"]
+ifeval::["{build-type}" != "community"]
 * *Creating backups:* https://documentation.suse.com/cloudnative/rancher-manager/v2.11/en/rancher-admin/back-up-restore-and-disaster-recovery/back-up.html[Create a backup] before you upgrade Rancher. To roll back Rancher after an upgrade, you must first back up and restore Rancher to the previous Rancher version. Because Rancher will be restored to the same state as when the backup was created, any changes post-upgrade will not be included after the restore.
 endif::[]
 * *CNI requirements:*
@@ -50,7 +50,7 @@ ifeval::["{build-type}" == "community"]
 ** When using a proxy in front of an air-gapped Rancher instance, you must pass additional parameters to `NO_PROXY`. See the https://docs.ranchermanager.rancher.io/getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/install-rancher[documentation] and issue https://github.com/rancher/docs/issues/2725#issuecomment-702454584[#2725].
 ** When installing Rancher with Docker in an air-gapped environment, you must supply a custom `registries.yaml` file to the `docker run` command, as shown in the https://docs.k3s.io/installation/private-registry[K3s documentation]. If the registry has certificates, then you'll also need to supply those. See https://github.com/rancher/rancher/issues/28969#issuecomment-694474229[#28969].
 endif::[]
-ifeval::["{build-type}" == "product"]
+ifeval::["{build-type}" != "community"]
 ** When using a proxy in front of an air-gapped Rancher instance, you must pass additional parameters to `NO_PROXY`. See the https://documentation.suse.com/cloudnative/rancher-manager/v2.11/en/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.html[documentation] and issue https://github.com/rancher/docs/issues/2725#issuecomment-702454584[#2725].
 ** When installing Rancher with Docker in an air-gapped environment, you must supply a custom `registries.yaml` file to the `docker run` command, as shown in the https://documentation.suse.com/cloudnative/k3s/latest/en/installation/private-registry.html[K3s documentation]. If the registry has certificates, then you'll also need to supply those. See https://github.com/rancher/rancher/issues/28969#issuecomment-694474229[#28969].
 endif::[]
@@ -163,11 +163,9 @@ See https://github.com/rancher/rancher/issues/39525[#39525].
 
 == Long-standing Known Issues
 
-<!-- Apply same headers as "Major Bug Fixes" but with "Long-standing Known Issues" suffix instead -->
-
 === Long-standing Known Issues - Cluster Provisioning
 
-* Not all cluster tools can be installed on a hardened cluster.<!--no issue number available -->
+* Not all cluster tools can be installed on a hardened cluster.
 * *Rancher v2.8.1:*
 ** When you  attempt to register a new etcd/controlplane node in a CAPR-managed cluster after a failed etcd snapshot restoration, the node can become stuck in a perpetual paused state, displaying the error message `[ERROR]  000 received while downloading Rancher connection information. Sleeping for 5 seconds and trying again`. As a workaround, you can unpause the cluster by running `kubectl edit clusters.cluster clustername -n fleet-default` and set `spec.unpaused` to `false`.  See https://github.com/rancher/rancher/issues/43735[#43735].
 * *Rancher v2.7.2:*
@@ -178,7 +176,7 @@ See https://github.com/rancher/rancher/issues/39525[#39525].
 * *Rancher v2.9.0:*
 ** The Weave CNI plugin for RKE v1.27 and later is now deprecated, due to the plugin being deprecated for upstream Kubernetes v1.27 and later. RKE creation will not go through as it will raise a validation warning. See https://github.com/rancher/dashboard/issues/11322[#11322].
 
-=== Long-standing Known Issues - RKE2 Provisioning <!-- hostbusters -->
+=== Long-standing Known Issues - RKE2 Provisioning
 
 * *Rancher v2.9.0:*
 ** When adding the `provisioning.cattle.io/allow-dynamic-schema-drop` annotation through the cluster config UI, the annotation disappears before adding the value field. When viewing the YAML, the respective value field is not updated and is displayed as an empty string. As a workaround, when creating the cluster, set the annotation by using the *Edit Yaml* option located in the dropdown *⋮* attached to your respective cluster in the *Cluster Management* view. See https://github.com/rancher/dashboard/issues/13655[#13655].
@@ -190,7 +188,7 @@ See https://github.com/rancher/rancher/issues/39525[#39525].
 ** When viewing or editing the YAML configuration of downstream RKE2 clusters through the UI, `spec.rkeConfig.machineGlobalConfig.profile` is set to `null`, which is an invalid configuration. See https://github.com/rancher/dashboard/issues/8480[#8480].
 *** https://docs.rke2.io/install/uninstall?_highlight=uninstall#tarball-method[RKE2 uninstall script].
 
-=== Long-standing Known Issues - K3s Provisioning <!-- hostbusters -->
+=== Long-standing Known Issues - K3s Provisioning
 
 * *Rancher v2.7.6:*
 ** Provisioning RKE2/K3s clusters with added (not built-in) custom node drivers causes provisioning to fail. As a workaround, https://github.com/rancher/rancher/issues/37074#issuecomment-1664722305[fix] the added node drivers after activating. See https://github.com/rancher/rancher/issues/37074[#37074].
@@ -206,7 +204,7 @@ See https://github.com/rancher/rancher/issues/39525[#39525].
 * *Rancher v2.7.7:*
 ** When creating a cluster in the Rancher UI it does not allow the use of an underscore `_` in the `Cluster Name` field. See https://github.com/rancher/dashboard/issues/9416[#9416].
 
-=== Long-standing Known Issues - Hosted Rancher <!-- hostbusters -->
+=== Long-standing Known Issues - Hosted Rancher
 
 * *Rancher v2.7.5:*
 ** The *Cluster* page shows the *Registration* tab when updating or upgrading a hosted cluster. See https://github.com/rancher/dashboard/issues/8524[#8524].
@@ -216,7 +214,7 @@ See https://github.com/rancher/rancher/issues/39525[#39525].
 * *Rancher v2.7.0:*
 ** EKS clusters on Kubernetes v1.21 or below on Rancher v2.7 cannot be upgraded. See https://github.com/rancher/rancher/issues/39392[#39392].
 
-=== Long-standing Known Issues - Authentication <!-- night's watch -->
+=== Long-standing Known Issues - Authentication
 
 * *Rancher v2.9.0:*
 ** There are some known issues with the OpenID Connect provider support:
@@ -224,7 +222,7 @@ See https://github.com/rancher/rancher/issues/39525[#39525].
 *** When the generic OIDC auth provider is enabled, auth provider users that are added to a cluster/project by their username are not able to access resources upon logging in. A user will only have access to resources upon login if the user is added by their userID.  See https://github.com/rancher/rancher/issues/46105[#46105].
 *** When the generic OIDC auth provider is enabled and an auth provider user in a nested group is logged into Rancher, the user will see the following error when they attempt to create a Project: `http://projectroletemplatebindings.management.cattle.io/[projectroletemplatebindings.management.cattle.io] is forbidden: User "u-gcxatwsnku" cannot create resource "projectroletemplatebindings" in API group "http://management.cattle.io/[management.cattle.io]" in the namespace "p-9t5pg"`. However, the project is still created. See https://github.com/rancher/rancher/issues/46106[#46106].
 
-=== Long-standing Known Issues - Rancher Webhook <!-- neo -->
+=== Long-standing Known Issues - Rancher Webhook
 
 * *Rancher v2.7.2:*
 ** A webhook is installed in all downstream clusters. There are several issues that users may encounter with this functionality:
@@ -235,8 +233,8 @@ See https://github.com/rancher/rancher/issues/39525[#39525].
 * *Rancher v2.7.2:*
 ** If you're using Rancher v2.7.2 with Harvester v1.1.1 clusters, you won't be able to select the Harvester cloud provider when deploying or updating guest clusters. The https://github.com/harvester/release-notes/blob/main/v1.1.2.md#important-information-about-rancher-support[Harvester release notes] contain instructions on how to resolve this. See https://github.com/harvester/harvester/issues/3750[#3750].
 
-=== Long-standing Known Issues - Backup/Restore <!-- night's watch -->
+=== Long-standing Known Issues - Backup/Restore
 
-* When migrating to a cluster with the Rancher Backup feature, the server-url cannot be changed to a different location. It must continue to use the same URL.<!-- no issue number -->
+* When migrating to a cluster with the Rancher Backup feature, the server-url cannot be changed to a different location. It must continue to use the same URL.
 * *Rancher v2.7.7:*
 ** Due to the backoff logic in various components, downstream provisioned K3s and RKE2 clusters may take longer to re-achieve `Active` status after a migration. If you see that a downstream cluster is still updating or in an error state immediately after a migration, please let it attempt to resolve itself. This might take up to an hour to complete. See https://github.com/rancher/rancher/issues/34518[#34518] and https://github.com/rancher/rancher/issues/42834[#42834].
