Update prime name
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/v2.13/modules/en/pages/release-notes/v2.13.1.adoc
+++ b/versions/v2.13/modules/en/pages/release-notes/v2.13.1.adoc
@@ -123,7 +123,7 @@ endif::[]
 
 * Fixed an issue where attempting to uninstall Rancher's Helm chart failed because recent Fleet updates introduced new cronjob resources, and when Rancher adopted the latest version of Fleet, the Rancher uninstall process was not updated to include the cleanup of these new resources. See https://github.com/rancher/rancher/issues/51478[#51478]. To resolve this issue in previously affected versions, apply the workaround detailed in this https://support.scc.suse.com/s/kb/Rancher-Uninstall-via-Helm-release-fails-due-to-post-delete-hook-job-failure?language=en_US[Knowledge Base article].
 
-== Virtualization Management (Harvester)
+== SUSE Virtualization (Harvester)
 
 === Known Issues
 
