Updating Helm install with link to KB article v2.13.1
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/v2.13/modules/en/pages/installation-and-upgrade/install-rancher.adoc
+++ b/versions/v2.13/modules/en/pages/installation-and-upgrade/install-rancher.adoc
@@ -47,6 +47,11 @@ The following CLI tools are required for setting up the Kubernetes cluster. Plea
 
 == Install the Rancher Helm Chart
 
+[CAUTION]
+====
+The Rancher Prime chart has been renamed from `rancher` to `rancher-prime` in Rancher v2.13.1. This may cause failures with clusters utilizing the ingress-nginx ingress controller. Please refer to this https://support.scc.suse.com/s/kb/Upgrade-to-Rancher-Prime-v2-13-1-fails-in-clusters-with-ingress-nginx?language=en_US[knowledge base article] to resolve issues during upgrade.
+====
+
 Rancher is installed using the https://helm.sh/[Helm] package manager for Kubernetes. Helm charts provide templating syntax for Kubernetes YAML manifest documents. With Helm, we can create configurable deployments instead of just using static files.
 
 For systems without direct internet access, see xref:installation-and-upgrade/other-installation-methods/air-gapped/install-rancher-ha.adoc[Air Gap: Kubernetes install].
