--- a/versions/v2.13/modules/en/pages/release-notes/v2.13.1.adoc
+++ b/versions/v2.13/modules/en/pages/release-notes/v2.13.1.adoc
@@ -2,8 +2,13 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-12-16
+:revdate: 2025-12-19
 :page-revdate: {revdate}
+
+[IMPORTANT]
+====
+In Rancher Prime v2.13.1, the Helm chart name was changed from `rancher` to `rancher-prime`. When upgrading Rancher instances to Rancher Prime v2.13.1 you may see failures with clusters utilizing the ingress-nginx ingress controller. Please refer to this https://support.scc.suse.com/s/kb/Upgrade-to-Rancher-Prime-v2-13-1-fails-in-clusters-with-ingress-nginx?language=en_US[knowledge base article] to resolve upgrade issues.
+====
 
 [IMPORTANT]
 ====
