--- a/versions/v2.11/modules/zh/pages/cluster-admin/manage-clusters/projects-and-namespaces.adoc
+++ b/versions/v2.11/modules/zh/pages/cluster-admin/manage-clusters/projects-and-namespaces.adoc
@@ -1,6 +1,6 @@
 = 使用 {rancher-product-name} 的项目和 Kubernetes 命名空间
 :page-languages: [en, zh]
-:revdate: 2025-08-18
+:revdate: 2026-01-08
 :page-revdate: {revdate}
 :description: Rancher Projects 减轻了集群的管理负担并支持多租户。学习创建项目并将项目划分为 Kubernetes 命名空间
 :experimental:
@@ -11,8 +11,7 @@
 
 [NOTE]
 ====
-
-UI 上不再强调项目，因为不需要在项目范围内创建 Kubernetes 资源。但是，如果启用了旧版功能开关，则仍可以在项目范围内创建诸如 xref:security/secrets-hub.adoc#_在项目中创建密文[Secrets] 之类的资源。
+Projects are de-emphasized on the UI because it is not required to create Kubernetes resources within a project scope. However, resources such as xref:security/secrets-hub.adoc#_creating_secrets_in_projects[Secrets] can still be created in a project scope.
 ====
 
 
@@ -198,3 +197,7 @@ Kubernetes 支持由同一个物理集群支持的多个虚拟集群。这些虚
 . 选择**删除**。
 
 删除项目时，以前与该项目关联的任何命名空间都将保留在集群上。你可以在 Rancher UI **项目/命名空间**页面的**不在项目内**选项卡中找到这些命名空间。你可以通过xref:cluster-admin/namespaces.adoc#_将命名空间移动到另一个项目[移动]来将它们重新分配给项目。
+
+== Further Reading
+
+You can create projects and project members more programmatically via the xref:api/quickstart.adoc[Public API]. See the xref:api/workflows/projects.adoc[project workflow doc] for more information.
