--- a/versions/v2.12/modules/en/pages/cluster-admin/manage-clusters/projects-and-namespaces.adoc
+++ b/versions/v2.12/modules/en/pages/cluster-admin/manage-clusters/projects-and-namespaces.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-10-01
+:revdate: 2026-01-08
 :page-revdate: {revdate}
 :description: Rancher Projects ease the administrative burden of your cluster and support multi-tenancy. Learn to create projects and divide projects into Kubernetes namespaces
 :experimental:
@@ -13,8 +13,7 @@ A project is a group of namespaces, and it is a concept introduced by Rancher. P
 
 [NOTE]
 ====
-
-Projects are de-emphasized on the UI because it is not required to create Kubernetes resources within a project scope. However, resources such as xref:security/secrets-hub.adoc#_creating_secrets_in_projects[Secrets] can still be created in a project scope if the legacy feature flag is enabled.
+Projects are de-emphasized on the UI because it is not required to create Kubernetes resources within a project scope. However, resources such as xref:security/secrets-hub.adoc#_creating_secrets_in_projects[Secrets] can still be created in a project scope.
 ====
 
 
@@ -201,3 +200,7 @@ To add a resource quota,
 . Select *Delete*.
 
 When you delete a project, any namespaces that were formerly associated with the project will remain on the cluster. You can find these namespaces in the Rancher UI, in the *Not in a Project* tab of the *Projects/Namespaces* page. You can reassign these namespaces to a project by xref:cluster-admin/namespaces.adoc#_moving_namespaces_to_another_project[moving] them.
+
+== Further Reading
+
+You can create projects and project members more programmatically via the xref:api/quickstart.adoc[Public API]. See the xref:api/workflows/projects.adoc[project workflow doc] for more information.
