Apply 9b19bb66 (Add ec2:DescribeAvailabilityZones to control plane and etcd/worker permissions) to other versions

--- a/versions/v2.11/modules/en/pages/cluster-deployment/set-up-cloud-providers/amazon.adoc
+++ b/versions/v2.11/modules/en/pages/cluster-deployment/set-up-cloud-providers/amazon.adoc
@@ -1,6 +1,6 @@
 = Setting up the Amazon Cloud Provider
 :page-languages: [en, zh]
-:revdate: 2025-03-12
+:revdate: 2026-01-15
 :page-revdate: {revdate}
 :weight: 1
 
@@ -54,6 +54,7 @@ IAM Policy for nodes with the `controlplane` role:
         "autoscaling:DescribeTags",
         "ec2:DescribeInstances",
         "ec2:DescribeRegions",
+        "ec2:DescribeAvailabilityZones",
         "ec2:DescribeRouteTables",
         "ec2:DescribeSecurityGroups",
         "ec2:DescribeSubnets",
@@ -124,6 +125,7 @@ IAM policy for nodes with the `etcd` or `worker` role:
       "Action": [
         "ec2:DescribeInstances",
         "ec2:DescribeRegions",
+        "ec2:DescribeAvailabilityZones",
         "ecr:GetAuthorizationToken",
         "ecr:BatchCheckLayerAvailability",
         "ecr:GetDownloadUrlForLayer",
