Sync Community PR #1717 (Document workaround for migrating across distributions)

--- a/versions/v2.13/modules/en/pages/rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc
+++ b/versions/v2.13/modules/en/pages/rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-12-15
+:revdate: 2026-01-15
 :page-revdate: {revdate}
 
 If you are migrating Rancher to a new Kubernetes cluster, you don't need to install Rancher on the new cluster first. If Rancher is restored to a new cluster with Rancher already installed, it can cause problems.
@@ -135,28 +135,48 @@ kubectl create secret generic encryptionconfig \
 
 
 . Apply the manifest, and monitor the Restore status:
- .. Apply the `Restore` object resource:
+.. Apply the `Restore` object resource:
 +
 [,bash]
 ----
 kubectl apply -f restore-migration.yaml
 ----
 
- .. Watch the Restore status:
+.. Watch the Restore status:
 +
 [,bash]
 ----
 kubectl get restore
 ----
 
- .. Watch the restoration logs:
+.. Watch the restoration logs:
 +
 [,bash]
 ----
 kubectl logs -n cattle-resources-system --tail 100 -f -l app.kubernetes.io/instance=rancher-backup
 ----
 
- .. Once the Restore resource has the status `Completed`, you can continue the cert-manager and Rancher installation.
+.. Once the Restore resource has the status `Completed`, you can continue the cert-manager and Rancher installation.
++
+[IMPORTANT]
+====
+When migrating Rancher between any two different Kubernetes distributions (e.g. from K3s to RKE2), the object representing the local cluster has to be modified to allow Rancher to detect the new distribution. After the restoration is completed, and **before** bringing up Rancher on the new cluster, edit the local cluster object:
+
+[,bash]
+----
+kubectl edit clusters.management.cattle.io local
+----
+
+. Change the value of `status.driver` to `imported`.
+. Remove `status.provider`.
+. Remove the entire `status.version` map.
+. Remove the label with the key `provider.cattle.io` in `metadata.labels`.
+. Remove the annotation with the key `management.cattle.io/current-cluster-controllers-version` in `metadata.annotations`.
+. Remove the entire `spec.rke2Config` or `spec.k3sConfig` map, if present.
+. Save the changes.
+
+Note that removing `spec.rke2Config` or `spec.k3sConfig` will erase your distribution-specific upgrade configuration for the local cluster. It can be xref:cluster-admin/backups-and-restore/backups-and-restore.adoc[reconfigured] if the new distribution is configurable for the local cluster.
+====
 
 == 3. Install cert-manager
 
