--- a/versions/v2.12/modules/zh/pages/security/psact.adoc
+++ b/versions/v2.12/modules/zh/pages/security/psact.adoc
@@ -1,6 +1,6 @@
 = Pod 安全准入 (PSA) 配置模板
 :page-languages: [en, zh]
-:revdate: 2025-08-05
+:revdate: 2026-01-15
 :page-revdate: {revdate}
 
 xref:security/psa-pss.adoc[Pod Security admission (PSA)] 配置模板是 Rancher 自定义资源 (CRD)，在 Rancher v2.7.2 及更高版本中可用。这些模板提供了可应用于集群的预定义安全配置：
@@ -132,6 +132,7 @@ RKE1::
 * `longhorn-system`
 * `rancher-alerting-drivers`
 * `security-scan`
+* `sr-operator-system`
 * `tigera-operator`
 
 Rancher、Rancher 拥有的一些 Chart 以及 RKE2 和 K3s 发行版都使用这些命名空间。列出的命名空间的一个子集已经在内置的 Rancher `rancher-restricted` 策略中被豁免，用于下游集群。有关运行 Rancher 所需的所有豁免的完整模板，请参阅此xref:security/sample-psact.adoc[准入配置示例]。
