--- a/versions/v2.10/modules/en/pages/security/psact.adoc
+++ b/versions/v2.10/modules/en/pages/security/psact.adoc
@@ -1,6 +1,6 @@
 = Pod Security Admission (PSA) Configuration Templates
 :page-languages: [en, zh]
-:revdate: 2025-07-07
+:revdate: 2026-01-15
 :page-revdate: {revdate}
 
 xref:security/psa-pss.adoc[Pod Security admission (PSA)] configuration templates are a Rancher custom-defined resource (CRD), available in Rancher v2.7.2 and above. The templates provide pre-defined security configurations that you can apply to a cluster:
@@ -139,6 +139,7 @@ When you run Rancher on a Kubernetes cluster that enforces a restrictive securit
 * `longhorn-system`
 * `rancher-alerting-drivers`
 * `security-scan`
+* `sr-operator-system`
 * `tigera-operator`
 
 Rancher, some Rancher owned charts, and RKE2 and K3s distributions all use these namespaces. A subset of the listed namespaces are already exempt in the built-in Rancher `rancher-restricted` policy, for use in downstream clusters. For a complete template which has all the exemptions you need to run Rancher, please refer to this xref:security/sample-psact.adoc[sample Admission Configuration].
